website/versioned_docs/version-2.0.0-alpha.10/node-client.baseapiclient.md
---
id: version-2.0.0-alpha.10-node-client.baseapiclient
title: BaseAPIClient class
hide_title: true
original_id: node-client.baseapiclient
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## BaseAPIClient class


<b>Signature:</b>

```typescript
export declare abstract class BaseAPIClient 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(options)](./node-client.baseapiclient._constructor_.md) |  | Constructs a new instance of the <code>BaseAPIClient</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [accessToken](./node-client.baseapiclient.accesstoken.md) |  | <code>string &#124; null</code> |  |
|  [apiKey](./node-client.baseapiclient.apikey.md) |  | <code>string</code> |  |
|  [endpoint](./node-client.baseapiclient.endpoint.md) |  | <code>string</code> |  |
|  [fetchFunction](./node-client.baseapiclient.fetchfunction.md) |  | <code>typeof fetch</code> |  |
|  [requestClass](./node-client.baseapiclient.requestclass.md) |  | <code>typeof Request</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [changePassword(newPassword, oldPassword)](./node-client.baseapiclient.changepassword.md) |  |  |
|  [del(path, options)](./node-client.baseapiclient.del.md) |  |  |
|  [deleteOAuthProvider(providerID)](./node-client.baseapiclient.deleteoauthprovider.md) |  |  |
|  [fetch(input, init)](./node-client.baseapiclient.fetch.md) |  |  |
|  [get(path, options)](./node-client.baseapiclient.get.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./node-client.baseapiclient.linkoauthproviderwithaccesstoken.md) |  |  |
|  [login(loginID, password, options)](./node-client.baseapiclient.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./node-client.baseapiclient.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./node-client.baseapiclient.loginwithcustomtoken.md) |  |  |
|  [logout()](./node-client.baseapiclient.logout.md) |  |  |
|  [me()](./node-client.baseapiclient.me.md) |  |  |
|  [oauthAuthorizationURL(providerID, options)](./node-client.baseapiclient.oauthauthorizationurl.md) |  |  |
|  [post(path, options)](./node-client.baseapiclient.post.md) |  |  |
|  [postAndReturnAuthResponse(path, options)](./node-client.baseapiclient.postandreturnauthresponse.md) |  |  |
|  [prepareHeaders()](./node-client.baseapiclient.prepareheaders.md) |  |  |
|  [request(method, path, options)](./node-client.baseapiclient.request.md) |  |  |
|  [requestEmailVerification(email)](./node-client.baseapiclient.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./node-client.baseapiclient.requestforgotpasswordemail.md) |  |  |
|  [resetPassword(form)](./node-client.baseapiclient.resetpassword.md) |  |  |
|  [signup(loginIDs, password, options)](./node-client.baseapiclient.signup.md) |  |  |
|  [updateMetadata(metadata)](./node-client.baseapiclient.updatemetadata.md) |  |  |
|  [verifyWithCode(code)](./node-client.baseapiclient.verifywithcode.md) |  |  |

